feat(style): Header v1
Co-Authored-By: Irving Alejandro Hernández Ramírez <160192346+axxving@users.noreply.github.com>

--- a/Bloque02/html/acerca.html
+++ b/Bloque02/html/acerca.html
@@ -10,15 +10,18 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
 
+    <!--Llamando a los estilos CSS-->
+    <link rel="stylesheet" href="/Bloque02/css/styles.css" />
+
     <!--Nombre en pestaña-->
     <title>Ejercicio 01 - Bloque 01</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="/index.html">Inicio</a>
-        <a href="/html/acerca.html">Acerca</a>
-        <a href="/html/contacto.html">Contacto</a>
+        <a class="nav__link" href="/Bloque02/index.html">Inicio</a>
+        <a class="nav__link" href="/Bloque02/html/acerca.html">Acerca</a>
+        <a class="nav__link" href="/Bloque02/html/contacto.html">Contacto</a>
       </nav>
     </header>
 
