feat(style): Main v1
Co-Authored-By: Irving Alejandro Hernández Ramírez <160192346+axxving@users.noreply.github.com>

--- a/Bloque02/index.html
+++ b/Bloque02/index.html
@@ -27,7 +27,7 @@
 
     <div class="container__titulo">
       <h2>Ejercicio 01</h2>
-      <p>Primer Ejercicio del curso</p>
+      <p>Primer ejercicio del curso</p>
     </div>
 
     <!--TODO Main-->
