feat(style): Footer v1
Co-Authored-By: Irving Alejandro Hernández Ramírez <160192346+axxving@users.noreply.github.com>

--- a/Bloque02/html/contacto.html
+++ b/Bloque02/html/contacto.html
@@ -36,5 +36,21 @@
         <i class="fab fa-instagram"></i>
       </a>
     </div>
+    
+    <!--TODO Footer-->
+    <footer>
+      <p class="p-footer">Hecho por <a class="a-footer" href="">axxving</a></p>
+      <div class="social__icons">
+        <a class="a-footer-icon" href="">
+          <i class="fab fa-github"> </i>
+        </a>
+        <a class="a-footer-icon" href="">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a class="a-footer-icon" href="">
+          <i class="fab fa-linkedin"></i>
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
