--- a/Bloque02/index.html
+++ b/Bloque02/index.html
@@ -55,15 +55,15 @@
 
     <!--TODO Footer-->
     <footer>
-      <p>Hecho por <a href="">axxving</a></p>
+      <p class="p-footer">Hecho por <a class="a-footer" href="">axxving</a></p>
       <div class="social__icons">
-        <a href="">
+        <a class="a-footer-icon" href="">
           <i class="fab fa-github"> </i>
         </a>
-        <a href="">
+        <a class="a-footer-icon" href="">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="">
+        <a class="a-footer-icon" href="">
           <i class="fab fa-linkedin"></i>
         </a>
       </div>
