--- a/Bloque02/html/acerca.html
+++ b/Bloque02/html/acerca.html
@@ -38,5 +38,21 @@
         </p>
       </div>
     </div>
+
+    <!--TODO Footer-->
+    <footer>
+      <p class="p-footer">Hecho por <a class="a-footer" href="">axxving</a></p>
+      <div class="social__icons">
+        <a class="a-footer-icon" href="">
+          <i class="fab fa-github"> </i>
+        </a>
+        <a class="a-footer-icon" href="">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a class="a-footer-icon" href="">
+          <i class="fab fa-linkedin"></i>
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
