feat(style): Acerca v1
Co-Authored-By: Irving Alejandro Hernández Ramírez <160192346+axxving@users.noreply.github.com>

--- a/Bloque02/html/acerca.html
+++ b/Bloque02/html/acerca.html
@@ -26,8 +26,15 @@
     </header>
 
     <!--Acerca de mi-->
-    <div class="acerca">
-      <div class="container__contenido">
+    <div class="container__acerca">
+      <div class="container-img">
+        <img
+          width="150"
+          src="/Bloque02/imgs/img-acerca.png"
+          alt="Ilustración de tecnologias HTML y CSS."
+        />
+      </div>
+      <div class="container__content">
         <h2 class="titulo">Acerca de mi</h2>
         <p class="parrafo">
           He sido programador frontend por aproximadamente un año, he estado en
