feat(style): Contacto v1
Co-Authored-By: Irving Alejandro Hernández Ramírez <160192346+axxving@users.noreply.github.com>

--- a/Bloque02/html/acerca.html
+++ b/Bloque02/html/acerca.html
@@ -46,17 +46,22 @@
       </div>
     </div>
 
-    <!--TODO Footer-->
+    <!--Footer-->
     <footer>
       <p class="p-footer">Hecho por <a class="a-footer" href="">axxving</a></p>
       <div class="social__icons">
-        <a class="a-footer-icon" href="">
+        <a
+          class="a-footer-icon"
+          target="_blank"
+          href="https://github.com/axxving"
+        >
           <i class="fab fa-github"> </i>
         </a>
-        <a class="a-footer-icon" href="">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a class="a-footer-icon" href="">
+        <a
+          class="a-footer-icon"
+          target="_blank"
+          href="https://www.linkedin.com/in/alejandrohernandezda/"
+        >
           <i class="fab fa-linkedin"></i>
         </a>
       </div>
