--- a/Bloque02/html/contacto.html
+++ b/Bloque02/html/contacto.html
@@ -24,30 +24,52 @@
         <a class="nav__link" href="/Bloque02/html/contacto.html">Contacto</a>
       </nav>
     </header>
+
     <div class="container__contacto">
-      <h2>Contactame a travez de mis redes sociales</h2>
-      <a href="">
-        <i class="fab fa-github"></i>
-      </a>
-      <a href="">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="">
-        <i class="fab fa-instagram"></i>
-      </a>
+      <div class="container-img">
+        <img
+          width="150"
+          src="/Bloque02/imgs/img-redes.png"
+          alt="Ilustración de redes sociales."
+        />
+      </div>
+      <div class="container__content">
+        <h2>Contactame a travez de mis redes sociales</h2>
+        <div class="container-icons">
+          <a
+            class="contacto-icon"
+            target="_blank"
+            href="https://github.com/axxving"
+          >
+            <i class="fab fa-github"></i>
+          </a>
+          <a
+            class="contacto-icon"
+            target="_blank"
+            href="https://www.linkedin.com/in/alejandrohernandezda/"
+          >
+            <i class="fab fa-linkedin"></i>
+          </a>
+        </div>
+      </div>
     </div>
-    
-    <!--TODO Footer-->
+
+    <!--Footer-->
     <footer>
       <p class="p-footer">Hecho por <a class="a-footer" href="">axxving</a></p>
       <div class="social__icons">
-        <a class="a-footer-icon" href="">
+        <a
+          class="a-footer-icon"
+          target="_blank"
+          href="https://github.com/axxving"
+        >
           <i class="fab fa-github"> </i>
         </a>
-        <a class="a-footer-icon" href="">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a class="a-footer-icon" href="">
+        <a
+          class="a-footer-icon"
+          target="_blank"
+          href="https://www.linkedin.com/in/alejandrohernandezda/"
+        >
           <i class="fab fa-linkedin"></i>
         </a>
       </div>
