feat(): Versión estable
Co-Authored-By: Irving Alejandro Hernández Ramírez <160192346+axxving@users.noreply.github.com>

--- a/Bloque02/html/contacto.html
+++ b/Bloque02/html/contacto.html
@@ -34,7 +34,7 @@
         />
       </div>
       <div class="container__content">
-        <h2>Contactame a travez de mis redes sociales</h2>
+        <h2>Contactame a través de mis redes sociales</h2>
         <div class="container-icons">
           <a
             class="contacto-icon"
