--- a/Bloque02/index.html
+++ b/Bloque02/index.html
@@ -44,10 +44,10 @@
         <div class="container__content">
           <h2>Un poco sobre mi</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae unde
-            modi nemo inventore vel debitis ad nobis quis tempora maiores
-            sapiente, totam quos animi excepturi reiciendis minus expedita
-            reprehenderit repellendus.
+            He estado estudiando programación desde hace ya dos años, pero con
+            un enfoque en las redes. La verdad es que esa no era mi vocación.
+            Después de participar en un concurso nacional, me enamoré de la
+            programación, especialmente del desarrollo web.
           </p>
         </div>
       </div>
