feat(bloque03): mejoras en el input
Co-Authored-By: Irving Alejandro Hernández Ramírez <160192346+axxving@users.noreply.github.com>

--- a/Bloque03/textcontent.html
+++ b/Bloque03/textcontent.html
@@ -48,6 +48,14 @@
         padding: 15px;
         width: 80%;
         border-radius: 1rem;
+        &:focus {
+          border: none;
+          outline: none;
+        }
+        &:active {
+          outline: none;
+          border: none;
+        }
       }
     </style>
 
