feat(bloque04): hoja de scripts
Co-Authored-By: Irving Alejandro Hernández Ramírez <160192346+axxving@users.noreply.github.com>

--- a/Bloque04/parametros.html
+++ b/Bloque04/parametros.html
@@ -21,6 +21,7 @@
       // Declaramos la variable
       let numero2 = document.getElementById("segundoNumero");
 
+      // Funcion que se encarga de sumar los dos numeros
       function sumar() {
         // Convierte a un entero copn parseInt
         resultado = parseInt(numero1.value) + parseInt(numero2.value);
