feat(): corrección de texto
Co-Authored-By: Irving Alejandro Hernández Ramírez <160192346+axxving@users.noreply.github.com>

--- a/Bloque05/switch.html
+++ b/Bloque05/switch.html
@@ -19,7 +19,7 @@
       <input type="number" id="numeroFruta" min="1" max="5" />
       <button onclick="consultaPrecio()">Precio</button>
 
-      <h3 id="textoPrecio">Precio</h3>
+      <h3 id="textoPrecio">--</h3>
     </div>
 
     <script>
