feat(bloque08): this
Co-Authored-By: Irving Alejandro Hernández Ramírez <160192346+axxving@users.noreply.github.com>

--- a/Bloque08/actualizarObjeto.html
+++ b/Bloque08/actualizarObjeto.html
@@ -55,9 +55,9 @@
         tipo = tipoPropiedad.value;
         propiedad = agregaPropiedad.value;
 
-        perro[tipo] = propiedad;
+        nuevaPropiedad = perro[tipo] = propiedad;
 
-        propiedades.textContent = perro[propiedad];
+        propiedades.textContent = nuevaPropiedad;
       }
 
       // Nueva propiedad a perro
