feat(proyecto03): formateando código
Co-Authored-By: Irving Alejandro Hernández Ramírez <160192346+axxving@users.noreply.github.com>

--- a/Bloque03/tiposDatos.html
+++ b/Bloque03/tiposDatos.html
@@ -36,7 +36,7 @@
       let miVariableBool = 5 > 100;
 
       // Variable de conjuntos de datos
-      let persona = [1,2,3,3,[100,121,45]]
+      let persona = [1, 2, 3, 3, [100, 121, 45]];
 
       // Imprime el resultado en una consola
       console.log(
