--- a/Bloque03/variables.html
+++ b/Bloque03/variables.html
@@ -6,10 +6,7 @@
     <title>Bloque 03 | Variables</title>
   </head>
   <body>
-    <!--?Estilos-->
-    <style></style>
-
-    <!--*Contenedor-->
+    <!--Contenedor-->
     <div class="container">
       <!--Ayuda al usuario-->
       <p>Ingresa tu nombre:</p>
@@ -19,7 +16,7 @@
       <button onclick="saludar()">Saludar</button>
     </div>
 
-    <!--TODO Codigo-->
+    <!-- Codigo-->
     <script>
       function saludar() {
         let nombreUsuario = document.getElementById("nombreUsuario").value;
