--- a/Bloque04/funciones.html
+++ b/Bloque04/funciones.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Funciones</title>
-</head>
-<body>
-    
+  </head>
+  <body>
     <!-- Funciones que devuelven un valor -->
     <script>
-        function sumar() {
-            resultado = 2 + 3;
+      function sumar() {
+        resultado = 2 + 3;
 
-            // Palabra clave que devuelve el valor de la funcion
-            // Solo puede haber un return en una funcion
-            return resultado;
-        }
+        // Palabra clave que devuelve el valor de la funcion
+        // Solo puede haber un return en una funcion
+        return resultado;
+      }
 
-        let numero = "El numero es igual a: " + sumar();
+      let numero = "El numero es igual a: " + sumar();
 
-        alert(numero);
+      alert(numero);
     </script>
-</body>
+  </body>
 </html>
