feat(bloque10): constructor
Co-Authored-By: Irving Alejandro Hernández Ramírez <160192346+axxving@users.noreply.github.com>

--- a/Bloque10/clases.html
+++ b/Bloque10/clases.html
@@ -36,6 +36,20 @@
       };
 
       // Siempre deben de estar primero, antes de que se declare un nuevo objeto
+
+      // Toda clase debe de tener solo un constructor
+      // Si tiene mas de uno va a arrojar un error
+      // Si no lo tiene se hace uno por defecto
+
+      // Sintaxis
+      let PapelC = class PapelX {
+        // Constructor de un objeto dentro de una clase
+        // Sintaxis
+        constructor(alto, ancho) {
+          this.alto = alto;
+          this.ancho = ancho;
+        }
+      };
     </script>
   </body>
 </html>
