feat(bloque10): aclaraciones de herencia
Co-Authored-By: Irving Alejandro Hernández Ramírez <160192346+axxving@users.noreply.github.com>

--- a/Bloque10/getSet.html
+++ b/Bloque10/getSet.html
@@ -34,6 +34,16 @@
           this._goles = nuevoGoles;
         }
       }
+
+      // Usamos herencia sin saberlo
+
+      // Es probable que no tenga que "programara" herencia a menudo
+
+      // Implementa herencia solo cuando facilita las cosas
+
+      // Manen al minimo los niveles de herencia
+
+      // Evita modificar los objetos nativos del navegador
     </script>
   </body>
 </html>
