feat(proyecto11): añadiendo catch
Co-Authored-By: Irving Alejandro Hernández Ramírez <160192346+axxving@users.noreply.github.com>

--- a/Bloque11/proyectoDia11.html
+++ b/Bloque11/proyectoDia11.html
@@ -55,6 +55,9 @@
           dolares.textContent = data.moneda.dolares;
           euros.textContent = data.moneda.euros;
           cbu.textContent = data.cbu;
+        })
+        .catch(function (error) {
+          alert(error);
         });
     </script>
   </body>
