feat(proyecto12): versión no funcional
Co-Authored-By: Irving Alejandro Hernández Ramírez <160192346+axxving@users.noreply.github.com>

--- a/Bloque12/eventosDeTeclado.html
+++ b/Bloque12/eventosDeTeclado.html
@@ -15,6 +15,7 @@
       function verificarNumero(event) {
         // Verifica si se esta ingresando algo diferente de un numero
         if (event.keyCode < 48 || event.keyCode > 57) {
+          // No realizara su accion predeterminada
           event.preventDefault();
         }
       }
